# auto-forex-protobuf

./: AGENTS.md  README.md  pyproject.toml
proto/autoforex/server/v1/: trading_service.proto
src/auto_forex_protobuf/: __init__.py
